[package]
name = "naming-conventions-wasm"
description = "Naming Conventions - WebAssembly"

version = "1.0.2"
authors = ["Vahid V. <vhid.vz@gmail.com>"]
edition = "2018"

# https://crates.io/category_slugs
categories = ["wasm"]

keywords = ["conventions", "naming-conventions"]
homepage = "https://github.com/vhidvz/naming-conventions-wasm"
repository = "https://github.com/vhidvz/naming-conventions-wasm.git"

license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_log", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
naming-conventions = "1.0.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_log = { version = "1.0.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
